<?xml version="1.0"?>
<package format="2">
  <name>junbot_bringup</name>
  <version>1.2.5</version>
  <description>
    roslaunch scripts for starting the Junbot
  </description>
  <license>Apache 2.0</license>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="kkjong@robotis.com">Gilbert</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <maintainer email="00sao00ios00@gmail.com">Life Zero</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>diagnostic_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>junbot_msgs</depend>
  <exec_depend>junbot_description</exec_depend>
  <exec_depend>junbot_teleop</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rosserial_python</exec_depend>
  <exec_depend>realsense_camera</exec_depend>
</package>
