<?xml version="1.0"?>
<package format="2">
  <name>junbot_slam</name>
  <version>1.2.5</version>
  <description>
    The junbot_slam package provides roslaunch scripts for starting the SLAM
  </description>
  <license>Apache 2.0</license>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="kkjong@robotis.com">Gilbert</author>
  <author>Leon Jung</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <maintainer email="00sao00ios00@gmail.com">Life Zero</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <exec_depend>junbot_bringup</exec_depend>
</package>
