<?xml version="1.0"?>
<package format="2">
  <name>junbot_simulations</name>
  <version>1.2.5</version>
  <description>
    ROS packages for the Junbot (this based on Turtlebot3) (meta package)
  </description>
  <license>Apache 2.0</license>
  <license>BSD</license>
  <author email="pyo@robotis.com">Pyo</author>
  <author email="thlim@robotis.com">Darby Lim</author>
  <author email="kkjong@robotis.com">Gilbert</author>
  <author email="chc@robotis.com">HanCheol Cho</author>
  <author>Leon Jung</author>
  <maintainer email="willson@robotis.com">Will Son</maintainer>
  <maintainer email="00sao00ios00@gmail.com">Life Zero</maintainer>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>junbot_gazebo</exec_depend>
  <exec_depend>junbot_navigation_simulation</exec_depend>
  <exec_depend>junbot_fake</exec_depend>
  <export><metapackage/></export>
</package>
